hphp/test/zend/good/Zend/tests/errmsg_007.php.expectf

Fatal error: Can't use [] for reading in %s/errmsg_007.php on line 4
